<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button23"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="erase"
                android:layout_weight="1"
                android:text="@string/erase" />

            <Button
                android:id="@+id/button22"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Button" />

            <Button
                android:id="@+id/button21"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:onClick="onOperator"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/modulo" />

            <Button
                android:id="@+id/button20"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:onClick="onOperator"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addition" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/BTN7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:onClick="numberPress"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven" />

            <Button
                android:id="@+id/BTN8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:onClick="numberPress"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eight" />

            <Button
                android:id="@+id/BTN9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:onClick="numberPress"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nine" />

            <Button
                android:id="@+id/button14"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:onClick="onOperator"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/soustraction" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/BTN4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:onClick="numberPress"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four" />

            <Button
                android:id="@+id/BTN5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:onClick="numberPress"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five" />

            <Button
                android:id="@+id/BTN6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:onClick="numberPress"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/six" />

            <Button
                android:id="@+id/button15"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:onClick="onOperator"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/multiplication" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/BTN1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:onClick="numberPress"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one" />

            <Button
                android:id="@+id/BTN2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:onClick="numberPress"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two" />

            <Button
                android:id="@+id/BTN3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:onClick="numberPress"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three" />

            <Button
                android:id="@+id/button16"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:onClick="onOperator"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/division" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button13"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/negation" />

            <Button
                android:id="@+id/BTN0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:onClick="numberPress"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero" />

            <Button
                android:id="@+id/button11"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comma" />

            <Button
                android:id="@+id/button17"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:onClick="onEqual"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equal" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="410dp"
        android:layout_height="203dp"
        android:text="Enter In a Value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>